added css animation

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
 </head>
 <body>
   <div class="zone">
-    <img class="del" src="https://media.baumpub.com/files/slides/locale_image/full/0138/34278_en_89ea6_36931_bhs-max-ai-in-mrf-0011-smaller.jpg" alt="Snow" style="width:60%;">
-    <img class="background del"  src="background.jpg" alt="background" >
+    <div class="clipe">
+      <img class="img-head" src="34278_en_89ea6_36931_bhs-max-ai-in-mrf-0011-smaller.jpg" 
+      alt="Snow" 
+      style="width:90%;"
+      >
+      <img class="background" src="background.jpg" alt="background" >
+    </div>
+
     <div class="top-right">
-      <br> Placeat culpa minima perferendis dolores aliquam cupiditate? 
-      <br>Non praesentium,
-      <br>id suscipit quas tempora laborum!
-      <br>
+      <h1>Lets Create a <br>better World</h1> 
+      <h4>Clean World makes everything looks better</h4>
       <button type="submit">Know More></button>
     </div>
   </div>
@@ -22,15 +26,20 @@
       <div id="trash-img">
         <img src="trash-bin.svg" alt="box-trash">        
       </div>
-      <div class="grid-footer">
+      <div class="grid-footer triangle">
         <h1 id="news" >NEWS</h1>
-        <img class="img-foot" src="bruce.jpg" alt="unnamed.jpg">
+        <img class="img-foot" src="news.jpg" alt="unnamed.jpg">
       </div>
     </div>     
     <div class="top-right-about">
-      <h1>ABOUT US_______</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis reiciendis quibusdam consequatur autem animi dolore ab itaque optio atque ali</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae ut volupta</p>
+      <h1>ABOUT US_________</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit accusantium veniam.
+         <br> Sapiente pariatur at ullam corporis reprehenderit assumenda voluptate est ,
+         <br> hic, rem quidem asperiores. Nesciunt animi, 
+         totam excepturi eius magni quia. <br>totam excepturi eius magni quia.
+      </p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Omnis et nisi dolore architecto voluptate soluta eius voluptates officiis! <br> Sunt explicabo deserunt cum magnam voluptatem ut fugiat!</p>
     </div>
     <div>
      <div>
@@ -39,17 +48,26 @@
       <!-- <h3 class="txt-body">hospitals <br>& medical <br>univerisities & schools </h3>          -->
     </div>
   </div>
-  <divl class="txt-body">
-    <h2 style="color: green;">hospitals <br>& medical <br>univerisities & schools </h2>
+  <divl class="txt-body"> 
+    <h1 class="ml6">
+      <span class="text-wrapper">
+        <span class="letters"style="color: green;">hospitals & medical univerisities & schools </span>
+        <!-- <span class="letters">Universities & Schools Industrial factoriesLorem ipsum dolor sit amet consectetur adipisicing elit.</span> -->
+      </span>
+    </h1>
+    <!-- <h2 class="ml6" style="color: green;"><span>hospitals <br>& medical <br>univerisities & schools</span> </h2> -->
     <h2 style="color: turquoise;">Universities & Schools <br> <h2>Industrial factories</h2> <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>               
   </div>
   <div >
-    <h2 class="txt-mode">Lorem ipsum dolor sit <br>amet consectetue alit.<br> inventore enim corporis <br>Dolores at voluptas?<br> inventore enim corporis sit!</h2>
+
+    <h3 class="txt-mode">Lorem ipsum dolor sit <br>amet consectetue alit.<br> inventore enim corporis <br>Dolores at voluptas?<br> inventore enim corporis sit!</h3>
 
   </div>
              
 
 
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 
   <!-- <section class="grid-footer">
@@ -86,5 +104,7 @@
   
   
   </div> -->
+      <!-- Script -->
+      <script src="script.js"></script>
 </body>
 </html>
