--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
+  
   <div class="zone">
     <div class="clipe">
       <img class="img-head" src="34278_en_89ea6_36931_bhs-max-ai-in-mrf-0011-smaller.jpg" 
       alt="Snow" 
-      style="width:90%;"
+      style="width:90%; display: inline-block;"
       >
       <img class="background" src="background.jpg" alt="background" >
     </div>
