added scrolling to the page

--- a/index.html
+++ b/index.html
@@ -18,22 +18,24 @@
     <div class="top-right">
       <h1>Lets Create a <br>better World</h1> 
       <h4>Clean World makes everything looks better</h4>
-      <button type="submit">Know More></button>
+      <span class="button">
+        <a href="#about">Know More ></a>
+      </span>
     </div>
   </div>
   <!-- body -->
   <div class="grid-wrapper">
     <div class="box">
       <div id="trash-img">
-        <img src="trash-bin.svg" alt="box-trash">        
+        <img  src="trash-bin1.png" alt="box-trash">        
       </div>
-      <div class="grid-footer triangle">
+      <!-- <div class="grid-footer triangle">
         <h1 id="news" >NEWS</h1>
         <img class="img-foot" src="news.jpg" alt="unnamed.jpg">
-      </div>
+      </div> -->
     </div>     
-    <div class="top-right-about">
-      <h1>ABOUT US_________</h1>
+    <div id="about" class="top-right-about">
+      <h1>ABOUT US____________</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit accusantium veniam.
          <br> Sapiente pariatur at ullam corporis reprehenderit assumenda voluptate est ,
@@ -45,24 +47,25 @@
     <div>
      <div>
        <h1 id="consulting"><strong>CONSULTING________________ </strong></h1>
-     </div>
+      </div>
       <!-- <h3 class="txt-body">hospitals <br>& medical <br>univerisities & schools </h3>          -->
     </div>
   </div>
   <divl class="txt-body"> 
     <h1 class="ml6">
       <span class="text-wrapper">
-        <span class="letters"style="color: green;">hospitals & medical univerisities & schools </span>
-        <!-- <span class="letters">Universities & Schools Industrial factoriesLorem ipsum dolor sit amet consectetur adipisicing elit.</span> -->
+        <span class="letters"style="color: green;">hospitals & <br> medical<br>univerisities</span>
       </span>
     </h1>
-    <!-- <h2 class="ml6" style="color: green;"><span>hospitals <br>& medical <br>univerisities & schools</span> </h2> -->
-    <h2 style="color: turquoise;">Universities & Schools <br> <h2>Industrial factories</h2> <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>               
+    <h2  style="color: turquoise;">Universities & Schools <h2>Industrial factories</h2> <h3>Lorem ipsum dolor sit <br> amet consectetur adipisicing elit.</h3>               
   </div>
   <div >
+    <h3 class="txt-mod" style="color:blueviolet;">Lorem ipsum dolor sit <br>amet consectetue alit.<br> inventore eni corporis <br>Dolores at ptas?<br> inventore corporis sit!</h3>
 
-    <h3 class="txt-mode">Lorem ipsum dolor sit <br>amet consectetue alit.<br> inventore enim corporis <br>Dolores at voluptas?<br> inventore enim corporis sit!</h3>
-
+  </div>
+  <div class="grid-footer">
+    <h1 class="txt-mode" id="news" >NEWS</h1>
+    <img class="img-foot" src="news.jpg" alt="unnamed.jpg">
   </div>
              
 
