--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       alt="Snow" 
       style="width:90%; display: inline-block;"
       >
-      <img class="background" src="background.jpg" alt="background" >
+      <img class="background" src="back.jpg" alt="background" >
     </div>
 
     <div class="top-right">
