--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
          totam excepturi eius magni quia. <br>totam excepturi eius magni quia.
       </p>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Omnis et nisi dolore architecto voluptate soluta eius voluptates officiis! <br> Sunt explicabo deserunt cum magnam voluptatem ut fugiat!</p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Omnis et nisi dolore architecto voluptate soluta eius voluptates officiis! <br> Sunt explicabo deserunt cum magnam voluptatem ut fugiat!</p>
+
     </div>
     <div>
      <div>
@@ -51,16 +53,17 @@
       <!-- <h3 class="txt-body">hospitals <br>& medical <br>univerisities & schools </h3>          -->
     </div>
   </div>
-  <divl class="txt-body"> 
+  <divl class="txt-body">
+    <h2  style="color: turquoise;">Universities & Schools <h2>Industrial factories</h2> <h3>Lorem ipsum dolor sit <br> amet consectetur adipisicing elit.</h3>                
     <h1 class="ml6">
       <span class="text-wrapper">
         <span class="letters"style="color: green;">hospitals & <br> medical<br>univerisities</span>
       </span>
     </h1>
-    <h2  style="color: turquoise;">Universities & Schools <h2>Industrial factories</h2> <h3>Lorem ipsum dolor sit <br> amet consectetur adipisicing elit.</h3>               
+    <h2 style="color:blue;">Universities & Schools <h2>Industrial factories</h2> <h3>Lorem ipsum dolor sit <br> amet consectetur adipisicing elit.</h3>               
   </div>
   <div >
-    <h3 class="txt-mod" style="color:blueviolet;">Lorem ipsum dolor sit <br>amet consectetue alit.<br> inventore eni corporis <br>Dolores at ptas?<br> inventore corporis sit!</h3>
+    <!-- <h3 class="txt-mode" style="color:blueviolet;">Lorem ipsum dolo -->
 
   </div>
   <div class="grid-footer">
