--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-  
+<!-- Header -->
   <div class="zone">
     <div class="clipe">
       <img class="img-head" src="34278_en_89ea6_36931_bhs-max-ai-in-mrf-0011-smaller.jpg" 
@@ -23,16 +23,12 @@
       </span>
     </div>
   </div>
-  <!-- body -->
+  <!-- About -->
   <div class="grid-wrapper">
     <div class="box">
       <div id="trash-img">
         <img  src="trash-bin1.png" alt="box-trash">        
       </div>
-      <!-- <div class="grid-footer triangle">
-        <h1 id="news" >NEWS</h1>
-        <img class="img-foot" src="news.jpg" alt="unnamed.jpg">
-      </div> -->
     </div>     
     <div id="about" class="top-right-about">
       <h1>ABOUT US____________</h1>
@@ -44,15 +40,14 @@
       </p>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Omnis et nisi dolore architecto voluptate soluta eius voluptates officiis! <br> Sunt explicabo deserunt cum magnam voluptatem ut fugiat!</p>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Omnis et nisi dolore architecto voluptate soluta eius voluptates officiis! <br> Sunt explicabo deserunt cum magnam voluptatem ut fugiat!</p>
-
     </div>
     <div>
      <div>
        <h1 id="consulting"><strong>CONSULTING________________ </strong></h1>
       </div>
-      <!-- <h3 class="txt-body">hospitals <br>& medical <br>univerisities & schools </h3>          -->
     </div>
   </div>
+  <!-- TXT & NEWS -->
   <divl class="txt-body">
     <h2  style="color: turquoise;">Universities & Schools <h2>Industrial factories</h2> <h3>Lorem ipsum dolor sit <br> amet consectetur adipisicing elit.</h3>                
     <h1 class="ml6">
@@ -63,8 +58,6 @@
     <h2 style="color:blue;">Universities & Schools <h2>Industrial factories</h2> <h3>Lorem ipsum dolor sit <br> amet consectetur adipisicing elit.</h3>               
   </div>
   <div >
-    <!-- <h3 class="txt-mode" style="color:blueviolet;">Lorem ipsum dolo -->
-
   </div>
   <div class="grid-footer">
     <h1 class="txt-mode" id="news" >NEWS</h1>
@@ -73,45 +66,9 @@
              
 
 
-  
+ <!-- Script -->
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-
-
-  <!-- <section class="grid-footer">
-    <div class="grid-footer">
-      <h1 id="news" >NEWS</h1>
-      <img class="img-foot" src="bruce.jpg" alt="unnamed.jpg">
-    </div> 
-  </section>   -->
-
-  <!-- <div class="container zone ">
-    <div class="text">
-      <h2 class="bottomtotop"><strong>CONSULTING___________ </strong></h2>
-      <h3 class="txt2">hospitals <br>& medical <br>univerisities & schools </h3>     
-    </div>
-    <div class="trash">
-      <p>About us </p>
-    </div>
- 
-
-   </div> -->
-  <!-- </div> -->
-  <!-- <div class="zone  grid-wrapper">
-    <div class="">
-      <h2 class=" bottomtotop"><strong>CONSULTING___________ </strong></h2>
-      <h3 class="txt2">hospitals <br>& medical <br>univerisities & schools </h3>      
-    </div>
-    <div class="box">
-     <img class="img-box" src="trash-bin.png" alt="box-trash">
-     <div class="top-right">
-       <p>about ushgjhgjhgjhgjhgjhg yhjhg jhgj ghj ghj ghj ghj  dser esr</p>
-     </div>           
-    </div>
-
-  
-  
-  </div> -->
-      <!-- Script -->
-      <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
